--- a/content/main.css
+++ b/content/main.css
@@ -71,20 +71,25 @@ li.todo {
 li.todo:hover {
   background: #C6DEED;
 }
+div.done:hover {
+  background: #BF2A22;
+  color:#DFDFDF;
+}
 div.done {
   text-align: center;
   position: absolute;
   right: 0;
   top: 0;
   border-left: 1px solid #c0daea;
-  background: #eee;
+  background: #DFDFDF;
   height: 30px;
   margin-bottom: 1px;
   width: 30px;
 }
 a.delete {
   text-decoration: none;
-  color: #333;
+  color: #BF2A22;
+  font-weight:bold;
 }
 
 
