--- a/content/main.css
+++ b/content/main.css
@@ -21,7 +21,7 @@ div.container {
   background: #FFF;
   position: relative;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 0 20px 0;
   border: 1px solid #c0daea;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
