--- a/content/main.css
+++ b/content/main.css
@@ -13,7 +13,7 @@ div.done:hover{background:#BF2A22;color:#DFDFDF;}
 div.done{text-align:center;position:absolute;right:0;top:0;border-left:1px solid #c0daea;background:#DFDFDF;height:30px;margin-bottom:1px;width:30px;}
 a.delete{text-decoration:none;color:#BF2A22;font-weight:bold;}
 #flash{background:#E8FFDB;border:1px solid #82B977;color:#333;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;width:220px;margin:10px auto;padding:5px 0;}
-#user_info{position:absolute;top:0;right:0;;-webkit-border-top-right-radius:10px;-moz-border-radius-topright:10px;border-top-right-radius:10px;-webkit-border-bottom-left-radius:10px;-moz-border-radius-bottomleft:10px;border-bottom-left-radius:10px;width:70px;background:#c0daea;font-size:0.7em;text-align:right;padding:0px 15px;line-height:35px;}
+#user_info{position:absolute;top:0;right:0;-webkit-border-top-right-radius:10px;-moz-border-radius-topright:10px;border-top-right-radius:10px;-webkit-border-bottom-left-radius:10px;-moz-border-radius-bottomleft:10px;border-bottom-left-radius:10px;width:70px;background:#c0daea;font-size:0.7em;text-align:right;padding:0px 15px;line-height:35px;}
 #user_info img.avatar{display:block;position:absolute;left:0;top:0;-webkit-border-bottom-left-radius:10px;-moz-border-radius-bottomleft:10px;border-bottom-left-radius:10px;height:35px;}
 #user_info a{text-decoration:none;margin-left:10px;}
 #user_info a.logout{font-weight:bold;}
